--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tekktekk-notes-client",
+  "name": "lionel-tay-website",
   "version": "1.0.0",
   "repository": "https://github.com/lioneltay/tekktekk-notes",
-  "homepage": "notes.tekktekk.com",
+  "homepage": "https://lioneltay.com",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "typecheck": "tsc --skipLibCheck -w --noEmit",
     "clean": "rimraf dist",
     "build": "npm run clean && webpack --config ./webpack/webpack.config.prod.js",
-    "deploy:dev": "npm run build && gcloud app deploy app.yaml --project=tekktekk --quiet",
+    "deploy:dev": "npm run build && gcloud app deploy dev.yaml --project=lionel-tay --quiet && gcloud app deploy dispatch.yaml --quiet",
+    "deploy:prod": "npm run build && gcloud app deploy prod.yaml --project=lionel-tay --quiet && gcloud app deploy dispatch.yaml --quiet",
     "cy:open": "cypress open",
     "test:watch": "jest --watch",
     "test": "jest"
@@ -20,61 +21,55 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.12",
-    "@types/ramda": "^0.25.47",
-    "@types/react": "^16.7.13",
+    "@types/jest": "^23.3.14",
+    "@types/node": "^10.14.4",
+    "@types/ramda": "^0.25.51",
+    "@types/react": "^16.8.13",
     "@types/react-content-loader": "^3.1.4",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/shallowequal": "^1.1.0",
-    "@types/styled-components": "^4.1.6",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.2",
+    "@types/shallowequal": "^1.1.1",
+    "@types/styled-components": "^4.1.14",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.10.0",
     "copy-webpack-plugin": "^4.6.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
-    "react-hot-loader": "^4.3.12",
+    "react-hot-loader": "^4.8.3",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.1",
-    "typescript": "^3.2.1",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14",
-    "workbox-webpack-plugin": "^3.6.3",
-    "worker-loader": "^2.0.0"
+    "typescript": "^3.4.3",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@material-ui/core": "^3.9.0",
+    "@babel/polyfill": "^7.4.3",
+    "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^3.0.0-alpha.8",
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "@tekktekk/react-dnd": "0.0.5",
     "@tekktekk/react-media-query": "^1.0.0",
-    "@types/react-jss": "^8.6.0",
-    "axios": "^0.18.0",
+    "@types/react-jss": "^8.6.3",
     "express": "^4.16.4",
-    "firebase": "^5.7.1",
-    "formik": "^1.4.1",
-    "idb": "^2.1.3",
+    "firebase": "^5.9.4",
+    "formik": "^1.5.2",
     "jss": "^9.8.7",
     "ramda": "^0.26.1",
-    "react": "^16.8.0-alpha.1",
+    "react": "^16.8.6",
     "react-content-loader": "^3.4.2",
-    "react-dom": "^16.8.0-alpha.1",
-    "react-flip-toolkit": "^6.5.3",
+    "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
     "react-router-dom": "^4.3.1",
-    "react-spring": "^7.2.8",
-    "react-testing-library": "^5.4.2",
-    "react-with-gesture": "^4.0.2",
-    "rxjs": "^6.3.3",
+    "react-spring": "^7.2.11",
+    "react-testing-library": "^5.9.0",
+    "rxjs": "^6.4.0",
     "shallowequal": "^1.1.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.2.0"
   }
 }
