--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_1e675daaeb1c_key -iv $encrypted_1e675daaeb1c_iv -in ./keys/travis-service-account.json.enc -out ./keys/travis-service-account.json -d
 
 install:
-  - cd client && npm install && cd ..
-  - cd server && npm install && cd ..
+  - npm install
 
 script:
   - npm run test
