--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "@types/common-tags": "^1.8.0",
     "@types/jest": "^23.3.14",
     "@types/node": "^10.14.4",
     "@types/ramda": "^0.25.51",
@@ -31,20 +33,21 @@
     "@types/react-content-loader": "^3.1.4",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
+    "@types/react-syntax-highlighter": "^10.1.0",
     "@types/shallowequal": "^1.1.1",
     "@types/styled-components": "^4.1.14",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
     "copy-webpack-plugin": "^4.6.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
-    "react-hot-loader": "^4.8.3",
+    "react-hot-loader": "^4.8.4",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.5",
-    "ts-loader": "^5.3.1",
-    "typescript": "^3.4.3",
-    "webpack": "^4.30.0",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.4.4",
+    "webpack": "^4.28.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
   },
@@ -54,18 +57,18 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
     "@types/react-jss": "^8.6.3",
+    "common-tags": "^1.8.0",
     "express": "^4.16.4",
-    "firebase": "^5.9.4",
-    "formik": "^1.5.2",
     "jss": "^9.8.7",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-content-loader": "^3.4.2",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
+    "react-markdown": "^4.0.8",
     "react-router-dom": "^4.3.1",
     "react-spring": "^7.2.11",
-    "react-testing-library": "^5.9.0",
+    "react-syntax-highlighter": "^10.2.1",
     "rxjs": "^6.4.0",
     "shallowequal": "^1.1.0",
     "styled-components": "^4.2.0"
