--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "copy-webpack-plugin": "^4.6.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "raw-loader": "^2.0.0",
     "react-hot-loader": "^4.8.4",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.5",
